--- a/indicators/CMakeLists.txt
+++ b/indicators/CMakeLists.txt
@@ -1,78 +1,35 @@
-
-set(INDICATOR_MODEL_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/indicator_model.cpp
-)
-
-set(AIRSPEED_INDICATOR_SOURCES
-    #${CMAKE_CURRENT_SOURCE_DIR}/airspeed_indicator/src/airspeed_indicator.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/airspeed_indicator/src/airspeed_indicator_model.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/airspeed_indicator/src/airspeed_indicator_view.cpp
-)
-
-set(ATTITUDE_INDICATOR_SOURCES
-    #${CMAKE_CURRENT_SOURCE_DIR}/attitude_indicator/src/attitude_indicator.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/attitude_indicator/src/attitude_indicator_model.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/attitude_indicator/src/attitude_indicator_view.cpp
-)
-
-set(ALTITUDE_INDICATOR_SOURCES
-    #${CMAKE_CURRENT_SOURCE_DIR}/altitude_indicator/src/attitude_indicator_model.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/altitude_indicator/src/altitude_indicator_view.cpp
-)
-
-set(HEADING_INDICATOR_SOURCES
-    #${CMAKE_CURRENT_SOURCE_DIR}/altitude_indicator/src/attitude_indicator_model.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/heading_indicator/src/heading_indicator_view.cpp
-)
-
-set(LINEAR_GAUGE_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/tick.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/src/linear_gauge_value.cpp
-)
-
-add_library(PrimaryFlightDisplayIndicator
+add_library(FlightInstruments
     SHARED
-        ${AIRSPEED_INDICATOR_SOURCES}
-        ${ATTITUDE_INDICATOR_SOURCES}
-        ${ALTITUDE_INDICATOR_SOURCES}
-        ${HEADING_INDICATOR_SOURCES}
-        #${INDICATOR_MODEL_SOURCES}
+        ${CMAKE_CURRENT_SOURCE_DIR}/airspeed_indicator/src/airspeed_indicator_view.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/attitude_indicator/src/attitude_indicator_view.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/altitude_indicator/src/altitude_indicator_view.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/heading_indicator/src/heading_indicator_view.cpp
 )
 
-target_include_directories(PrimaryFlightDisplayIndicator
+target_include_directories(FlightInstruments
     PUBLIC
+        ${CMAKE_SOURCE_DIR}/primary_flight_display/include
         ${CMAKE_CURRENT_SOURCE_DIR}/airspeed_indicator/include
 	${CMAKE_CURRENT_SOURCE_DIR}/attitude_indicator/include
 	${CMAKE_CURRENT_SOURCE_DIR}/altitude_indicator/include
 	${CMAKE_CURRENT_SOURCE_DIR}/heading_indicator/include
-        ${CMAKE_SOURCE_DIR}/primary_flight_display/include
 )
 
-target_link_libraries(PrimaryFlightDisplayIndicator
+target_link_libraries(FlightInstruments
     PRIVATE
         Common
-        LinearGauge
+        GaugeIndicator
 	Qt5::Widgets
 )
 
-set_target_properties(PrimaryFlightDisplayIndicator
+set_target_properties(FlightInstruments
     PROPERTIES
-        #DEBUG_POSTFIX "-debug"
-        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>
-
 	CXX_STANDARD 17
         CXX_EXTENSIONS ON
         CXX_STANDARD_REQUIRED ON
-
-        LINKER_LANGUAGE     CXX
-        #LINK_WHAT_YOU_USE   TRUE
 )
 
-#set(INERTIAL_MEASUREMENT_UNIT_SOURCES
-#    ${CMAKE_CURRENT_SOURCE_DIR}/imu/src/imu_model.cpp
-#)
-
-#install(TARGETS PrimaryFlightDisplayIndicator
+#install(TARGETS FlightInstruments
 #   EXPORT PrimaryFlightDisplayIndicatorTargets
 #    LIBRARY    DESTINATION   lib
 #    ARCHIVE    DESTINATION   lib
@@ -82,6 +39,6 @@ set_target_properties(PrimaryFlightDisplayIndicator
 
 #install(EXPORT PrimaryFlightDisplayIndicatorTargets
 #    FILE          PrimaryFlightDisplayIndicatorTargets.cmake
-#    NAMESPACE     PrimaryFlightDisplayIndicator::
+#    NAMESPACE     FlightInstruments::
 #    DESTINATION   lib/cmake/PrimaryFlightDisplay
 #)
