--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.17.0)
 
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
+#include(CCache)
 
 project(PrimaryFlightDisplay
     VERSION 1.0
@@ -8,135 +9,113 @@ project(PrimaryFlightDisplay
     HOMEPAGE_URL https://github.com/clement-ailloud/PrimaryFlightDisplay.git
 )
 
-include(CPackConfig)
+#include(CPackConfig)
 include(PreCommit)
 
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-#set(CMAKE_LINK_WHAT_YOU_USE iwyu ${CMAKE_BINARY_DIR})
+set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
+#set(CMAKE_CXX_CPPCHECK cppcheck --project=${CMAKE_BINARY_DIR}/compile_commands.json --enable=all --output-file=${CMAKE_BINARY_DIR}/cppcheck_output.txt)
+#set(CMAKE_CXX_CLANG_TIDY clang-tidy --use-color -header-filter=.* --config-file=${CMAKE_SOURCE_DIR}/.clang-tidy -p ${CMAKE_BINARY_DIR})
+set(CMAKE_LINK_WHAT_YOU_USE iwyu ${CMAKE_BINARY_DIR})
 #set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE )
 
+# Common output directories
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/$<LOWER_CASE:$<CONFIG>>)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/$<LOWER_CASE:$<CONFIG>>)
+
 # Ninja Multi-Config
-get_property(IS_MULTI_CONFIG_GENERATOR GLOBAL
-    PROPERTY GENERATOR_IS_MULTI_CONFIG
-)
-if(IS_MULTI_CONFIG_GENERATOR)
+if(CMAKE_GENERATOR STREQUAL "Ninja Multi-Config")
     set(CMAKE_CONFIGURATION_TYPES Debug Release)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG Debug)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG Debug)
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE Release)
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE Release)
-else()
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE})
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE})
 endif()
 
 # Common compile options
-if((CMAKE_CXX_COMPILER_ID STREQUAL "Clang") OR (CMAKE_CXX_COMPILER_ID STREQUAL "GNU"))
+if (("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang") OR ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"))
     add_compile_options(
-        -g
         -Wall
         -Wextra
         -Wpedantic
+        $<$<CONFIG:Release>:-Werror>
         -fdiagnostics-color=always
-        $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CONFIG:Debug>>:-fprofile-instr-generate>
-        $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CONFIG:Debug>>:-fcoverage-mapping>
+        $<$<CONFIG:Debug>:-fprofile-instr-generate>
+        $<$<CONFIG:Debug>:-fcoverage-mapping>
     )
 endif()
 
-if(CMAKE_PLATFORM_ID STREQUAL "Linux")
+if (CMAKE_PLATFORM_ID STREQUAL "Linux")
     set(CMAKE_SHARED_LIBRARY_SUFFIX ".so")
 endif()
 
-set(CMAKE_TLS_VERIFY TRUE)
+#include(ExternalProject)
+#ExternalProject_Add(
+#    VirtualJoystickController
+#    #PREFIX ${CMAKE_CURRENT_BINARY_DIR}/VirtualJoystickController
+#    GIT_REPOSITORY https://github.com/clement-ailloud/VirtualJoystickController
+#    GIT_TAG develop
+#    TIMEOUT 10
+#    #UPDATE_COMMAND ${GIT_EXECUTABLE} pull
+#    UPDATE_COMMAND ""
+#    INSTALL_COMMAND ""
+#    #LOG_DOWNLOAD ON
+#    #CONFIGURE_COMMAND ""
+#    #BUILD_COMMAND ""
+#    #LOG_CONFIGURE ON
+#    #LOG_BUILD ON
+#    #BUILD_IN_SOURCE TRUE
+#)
 
+#find_package(Boost 1.6.1 REQUIRED)
 #find_package(Git REQUIRED)
-include(ExternalProject)
-ExternalProject_Add(VirtualJoystickControllerProject
-    PREFIX external/VirtualJoystickController
-    GIT_REPOSITORY https://github.com/clement-ailloud/VirtualJoystickController
-    GIT_TAG develop
-    TIMEOUT 10
-    UPDATE_COMMAND ""#${GIT_EXECUTABLE} pull"
-    INSTALL_COMMAND ""
-    BUILD_BYPRODUCTS ${CMAKE_BINARY_DIR}/external/VirtualJoystickController/src/VirtualJoystickControllerProject-build/Debug/libVirtualJoystickController.so
-)
-add_library(VirtualJoystickController SHARED IMPORTED)
-
-target_include_directories(VirtualJoystickController
-    INTERFACE
-        ${CMAKE_BINARY_DIR}/external/VirtualJoystickController/src/VirtualJoystickControllerProject/include
-)
-
-ExternalProject_Get_Property(VirtualJoystickControllerProject BINARY_DIR)
-set_property(TARGET VirtualJoystickController
-    PROPERTY
-        IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/${BINARY_DIR}/Debug/libVirtualJoystickController.so
-)
-
-file(COPY_FILE "${BINARY_DIR}/Debug/libVirtualJoystickController.so" "${CMAKE_BINARY_DIR}/${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libVirtualJoystickController.so")
-
 find_package(Qt5
     COMPONENTS
         Core      REQUIRED
         Widgets   REQUIRED
         Gui       REQUIRED
 )
-set(CMAKE_AUTOMOC TRUE)
-set(CMAKE_AUTOGEN_PARALLEL TRUE)
 
 add_executable(${CMAKE_PROJECT_NAME}
     ${CMAKE_SOURCE_DIR}/src/main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/primary_flight_display/src/primary_flight_display_view.cpp
 )
-
-if(ANDROID)
-    target_sources(${CMAKE_PROJECT_NAME}
-        PRIVATE
-            ${CMAKE_SOURCE_DIR}/android/AndroidManifest.xml
-    )
-endif()
-
-add_dependencies(${CMAKE_PROJECT_NAME} VirtualJoystickControllerProject)
 
 target_link_libraries(${CMAKE_PROJECT_NAME}
     PRIVATE
-        VirtualJoystickController
-        FlightInstruments
+        #${Boost_LIBRARIES}
+        PrimaryFlightDisplayIndicator
 	Qt5::Widgets
 )
+
 
 set_target_properties(${CMAKE_PROJECT_NAME}
     PROPERTIES
         #DEBUG_POSTFIX "-debug"
+        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<LOWER_CASE:$<CONFIG>>
 
 	CXX_STANDARD 17
         CXX_EXTENSIONS ON
+        CXX_STANDARD_REQUIRED ON
+
+        LINKER_LANGUAGE     CXX
 )
 
 install(TARGETS ${CMAKE_PROJECT_NAME}
     EXPORT ${CMAKE_PROJECT_NAME}Targets
-    CONFIGURATIONS ${CMAKE_CONFIGURATION_TYPES}
+    CONFIGURATIONS Debug Release
+    RUNTIME DESTINATION bin
     PUBLIC_HEADER DESTINATION include
 )
 
-add_subdirectory(primary_flight_display)
 add_subdirectory(lib)
 add_subdirectory(text_item)
 add_subdirectory(widgets)
+add_subdirectory(primary_flight_display)
 
-if(NOT ANDROID)
-    list(APPEND CMAKE_CTEST_ARGUMENTS "--verbose")
-    include(CTest)
-    add_subdirectory(test)
-    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test PROPERTY PROCESSOR_AFFINITY TRUE)
-endif()
+list(APPEND CMAKE_CTEST_ARGUMENTS "--verbose")
+include(CTest)
+add_subdirectory(test)
 
-
-#include(CMakePackageConfigHelpers)
-
-#write_basic_package_version_file("pfdConfigVersion.cmake"
-#    VERSION ${pfd_VERSION}
-#)
-
-#install(FILES "pfdConfig.cmake" "PFDConfigVersion.cmake"
-#    DESTINATION lib/cmake/pfd
-#)
+set(CPACK_GENERATOR "DEB")
+set(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
+set(CPACK_PACKAGE_VERSION "1.0.0")
+#set(CPACK_PACKAGE_CONTACT "your_email@example.com")
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "${CMAKE_PROJECT_NAME} is an interface that displays the flight instrument")
+set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Clement Ailloud")
+include(CPack)
